--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@remix-project/remixd": "^0.6.12",
     "bignumber.js": "^9.1.1",
     "lodash": "^4.17.21",
     "truffle-assertions": "^0.9.2"
