--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@remix-project/remixd": "^0.6.12",
+    "assert": "^2.0.0",
     "bignumber.js": "^9.1.1",
     "lodash": "^4.17.21",
     "truffle-assertions": "^0.9.2"
