--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@remix-project/remixd": "^0.6.12",
     "assert": "^2.0.0",
     "bignumber.js": "^9.1.1",
+    "ganache-time-traveler": "^1.0.16",
     "lodash": "^4.17.21",
     "truffle-assertions": "^0.9.2"
   }
